--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Certified Coffee Courses</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur impedit consequuntur nulla tempora officiis odit ea commodi cumque?</p>
             <p>Image from <a href="https://unsplash.com/">Unsplash</a></p>
-            <button style="width: 25px;">Learn More</button>
+            <button id="btn">Learn More</button>
         </div>
         
     </div>
