--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="text">
             <h1>Certified Coffee Courses</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur impedit consequuntur nulla tempora officiis odit ea commodi cumque?</p>
-            <p>Image from <a href="https://unsplash.com/">Unsplash</a></p>
+            <p>Image from <a href="https://unsplash.com/" target="-main">Unsplash</a></p>
             <button id="btn">Learn More</button>
         </div>
         
